src/Base/main/default/objects/General_Information__kav/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <label>Answer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>