src/Base/main/default/objects/General_Information__kav/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <description>This field can be used for rich text editing as well as embedding graphic files, videos and PDFs</description>
    <label>Content</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>