src/Base/main/default/objects/General_Information__kav/fields/Translation_Case__c.field-meta.xml
<CustomField>
    <fullName>Translation_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Translation Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Knowledge</relationshipLabel>
    <relationshipName>Knowledge</relationshipName>
    <type>Lookup</type>
</CustomField>