src/Base/main/default/objects/General_Information__kav/fields/Video__c.field-meta.xml
<CustomField>
    <fullName>Video__c</fullName>
    <description>This will link to a video of the step-by-step</description>
    <label>Video</label>
    <type>Url</type>
</CustomField>