src/Base/main/default/objects/General_Information__kav/recordTypes/FAQ.recordType-meta.xml
<RecordType>
    <fullName>FAQ</fullName>
    <active>true</active>
    <description>This record type is used for FAQ types of KB articles</description>
    <label>FAQ</label>
</RecordType>