src/Base/main/default/objects/General_Information__kav/recordTypes/How_To.recordType-meta.xml
<RecordType>
    <fullName>How_To</fullName>
    <active>true</active>
    <description>This record type is used for How To... types of KB articles</description>
    <label>How To</label>
</RecordType>