src/Base/main/default/objects/General_Information__kav/listViews/Installation_Guides.listView-meta.xml
<ListView>
    <fullName>Installation_Guides</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TITLE</field>
        <operation>contains</operation>
        <value>Installation Guide</value>
    </filters>
    <label>Installation Guides</label>
</ListView>